--- a/styles.css
+++ b/styles.css
@@ -284,5 +284,15 @@
   font-family: andale mono, monospace;
   font-size: 14px;
   width: 70px;
-  text-align: center;
+  margin-left: 5px;
+  /*text-align: center;*/
+}
+.chip-info {
+  margin-left: 5px;
+  font-size: 14px;
+  font-family: andale mono, monospace;
+  font-weight: bold;
+}
+.chip-info.recover {
+  color: #9ACD32;
 }
