--- a/effect_styles.css
+++ b/effect_styles.css
@@ -1,40 +1,98 @@
 .effect.ground-wave.frame-0 {
   width: 13px;
   height: 8px;
-  background: url("./sprites/whatever.gif") -9px -40px;
+  background: url("./sprites/atks_metwaves.png") -9px -40px;
 }
 .effect.ground-wave.frame-1 {
   width: 28px;
   height: 16px;
-  background: url("./sprites/whatever.gif") -31px -36px;
+  background: url("./sprites/atks_metwaves.png") -31px -36px;
 }
 .effect.ground-wave.frame-2 {
   width: 43px;
   height: 35px;
-  background: url("./sprites/whatever.gif") -65px -17px;
+  background: url("./sprites/atks_metwaves.png") -65px -17px;
 }
 .effect.ground-wave.frame-3 {
   width: 43px;
   height: 37px;
-  background: url("./sprites/whatever.gif") -114px -15px;
+  background: url("./sprites/atks_metwaves.png") -114px -15px;
 }
 .effect.ground-wave.frame-4 {
   width: 40px;
   height: 39px;
-  background: url("./sprites/whatever.gif") -164px -13px;
+  background: url("./sprites/atks_metwaves.png") -164px -13px;
 }
 .effect.ground-wave.frame-5 {
   width: 39px;
   height: 41px;
-  background: url("./sprites/whatever.gif") -219px -11px;
+  background: url("./sprites/atks_metwaves.png") -219px -11px;
 }
 .effect.ground-wave.frame-6 {
   width: 39px;
   height: 46px;
-  background: url("./sprites/whatever.gif") -265px -5px;
+  background: url("./sprites/atks_metwaves.png") -265px -5px;
 }
 .effect.ground-wave.frame-7 {
   width: 48px;
   height: 44px;
-  background: url("./sprites/whatever.gif") -312px -3px;
+  background: url("./sprites/atks_metwaves.png") -312px -3px;
+}
+
+.explosion.row_0 {
+  bottom: 56px;
+}
+.explosion.row_1 {
+  bottom: 32px;
+}
+.explosion.row_2 {
+  bottom: 0px;
+}
+.explosion.col_0 {
+  left: 0x;
+}
+.explosion.col_1 {
+  left: 40px;
+}
+.explosion.col_2 {
+  left: 80px;
+}
+.explosion.col_3 {
+  left: 120px;
+}
+.explosion.col_4 {
+  left: 160px;
+}
+.explosion.col_5 {
+  left: 200px;
+}
+.explosion.frame-0 {
+  width: 49px;
+  height: 48px;
+  background: url("./sprites/explosion.gif") -8px -4px;
+}
+.explosion.frame-1 {
+  width: 43px;
+  height: 38px;
+  background: url("./sprites/explosion.gif") -61px -10px;
+}
+.explosion.frame-2 {
+  width: 47px;
+  height: 42px;
+  background: url("./sprites/explosion.gif") -107px -9px;
+}
+.explosion.frame-3 {
+  width: 49px;
+  height: 44px;
+  background: url("./sprites/explosion.gif") -159px -9px;
+}
+.explosion.frame-4 {
+  width: 49px;
+  height: 43px;
+  background: url("./sprites/explosion.gif") -213px -12px;
+}
+.explosion.frame-5 {
+  width: 49px;
+  height: 37px;
+  background: url("./sprites/explosion.gif") -272px -14px;
 }
