--- a/styles.css
+++ b/styles.css
@@ -296,6 +296,16 @@
   background: url("./sprites/Swords_swoosh.png") -129px -106px;
 }
 
+#ball {
+  position: absolute;
+  background-color: red;
+  height: 25px;
+  width: 25px;
+  border: 1px solid brown;
+  border-radius: 5px;
+  z-index: 9001;
+}
+
 .obstacle-RockCube {
   width: 34px;
   height: 45px;
